Add header design

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,17 @@
-<p>header works!</p>
+<mat-toolbar class="flex justify-between">
+  <h1>Eagle Wear</h1>
+
+  <div class="flex gap-1">
+    <button mat-button *ngIf="hasLogin; else logoutTemplate">
+      Logout
+    </button>
+
+    <button mat-icon-button>
+      <mat-icon [matBadge]="cartItems">shopping_cart</mat-icon>
+    </button>
+  </div>
+</mat-toolbar>
+
+<ng-template #logoutTemplate>
+  <button mat-button>Login</button>
+</ng-template>
