--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,31 @@
-<p>login works!</p>
+<section class="flex justify-center mt-40">
+  <mat-card class="w-full md:w-1/2">
+    <mat-card-content>
+      <form [formGroup]="loginForm" class="flex flex-col gap-2">
+        <mat-form-field appearance="fill">
+          <mat-label>Username</mat-label>
+          <input formControlName="username" matInput />
+          <mat-error
+            *ngIf="loginForm.controls['username'].hasError('required')"
+          >
+            Username is <strong>required</strong>
+          </mat-error>
+        </mat-form-field>
+
+        <mat-form-field appearance="fill">
+          <mat-label>Password</mat-label>
+          <input type="password" formControlName="password" matInput />
+          <mat-error
+            *ngIf="loginForm.controls['password'].hasError('required')"
+          >
+            Password is <strong>required</strong>
+          </mat-error>
+        </mat-form-field>
+      </form>
+    </mat-card-content>
+
+    <mat-card-actions>
+      <button class="w-full" mat-flat-button color="primary">Login</button>
+    </mat-card-actions>
+  </mat-card>
+</section>
