--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -25,7 +25,9 @@
     </mat-card-content>
 
     <mat-card-actions>
-      <button class="w-full" mat-flat-button color="primary">Login</button>
+      <button class="w-full" mat-flat-button color="primary" (click)="login()">
+        Login
+      </button>
     </mat-card-actions>
   </mat-card>
 </section>
