--- a/src/app/pages/catalog/catalog.component.html
+++ b/src/app/pages/catalog/catalog.component.html
@@ -1,3 +1,18 @@
+<div class="flex justify-center w-full mb-2">
+  <mat-form-field class="w-full" appearance="fill">
+    <mat-label>Category</mat-label>
+    <mat-select
+      [formControl]="categoryControl"
+      *ngIf="categories$ | async as categories"
+    >
+      <mat-option value="">All categories</mat-option>
+      <mat-option *ngFor="let category of categories" [value]="category">
+        {{ category | titlecase }}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+</div>
+
 <div
   class="grid gap-2 grid-cols-auto-fit-12"
   *ngIf="products$ | async as products"
